--- a/browser-app/package.json
+++ b/browser-app/package.json
@@ -3,21 +3,21 @@
   "name": "browser-app",
   "version": "0.0.0",
   "dependencies": {
-    "@theia/core": "1.67.0",
-    "@theia/editor": "1.67.0",
-    "@theia/filesystem": "1.67.0",
-    "@theia/markers": "1.67.0",
-    "@theia/messages": "1.67.0",
-    "@theia/monaco": "1.67.0",
-    "@theia/navigator": "1.67.0",
-    "@theia/preferences": "1.67.0",
-    "@theia/process": "1.67.0",
-    "@theia/terminal": "1.67.0",
-    "@theia/workspace": "1.67.0",
+    "@theia/core": "^1.0.0",
+    "@theia/editor": "^1.0.0",
+    "@theia/filesystem": "^1.0.0",
+    "@theia/markers": "^1.0.0",
+    "@theia/messages": "^1.0.0",
+    "@theia/monaco": "^1.0.0",
+    "@theia/navigator": "^1.0.0",
+    "@theia/preferences": "^1.0.0",
+    "@theia/process": "^1.0.0",
+    "@theia/terminal": "^1.0.0",
+    "@theia/workspace": "^1.0.0",
     "hello-world": "workspace:*"
   },
   "devDependencies": {
-    "@theia/cli": "1.67.0"
+    "@theia/cli": "^1.0.0"
   },
   "scripts": {
     "bundle": "pnpm run rebuild && theia build --mode development",
